syntax = "proto2";
package message.common;
 enum EncryptionMethod{
     DES = 1;
     RSA = 2;
     ORG = 3;
 }